--- a/spa/package.json
+++ b/spa/package.json
@@ -11,43 +11,43 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^9.1.0",
-    "@angular/cdk": "^9.2.0",
-    "@angular/common": "~9.1.0",
-    "@angular/compiler": "~9.1.0",
-    "@angular/core": "~9.1.0",
+    "@angular/animations": "^9.1.3",
+    "@angular/cdk": "^9.2.1",
+    "@angular/common": "^9.1.3",
+    "@angular/compiler": "^9.1.3",
+    "@angular/core": "^9.1.3",
     "@angular/flex-layout": "^9.0.0-beta.29",
-    "@angular/forms": "~9.1.0",
-    "@angular/localize": "^9.1.0",
-    "@angular/material": "^9.2.0",
-    "@angular/platform-browser": "~9.1.0",
-    "@angular/platform-browser-dynamic": "~9.1.0",
-    "@angular/router": "~9.1.0",
-    "@angular/service-worker": "~9.1.0",
+    "@angular/forms": "^9.1.3",
+    "@angular/localize": "^9.1.3",
+    "@angular/material": "^9.2.1",
+    "@angular/platform-browser": "^9.1.3",
+    "@angular/platform-browser-dynamic": "^9.1.3",
+    "@angular/router": "^9.1.3",
+    "@angular/service-worker": "^9.1.3",
     "@auth0/angular-jwt": "^4.0.0",
     "@azure/ng-deploy": "^0.2.3",
     "@fortawesome/fontawesome-free": "^5.13.0",
-    "@material/circular-progress": "^6.0.0-canary.d6f60c98b.0",
-    "@ng-bootstrap/ng-bootstrap": "^6.0.3",
+    "@material/circular-progress": "^6.0.0",
+    "@ng-bootstrap/ng-bootstrap": "^6.1.0",
     "angular-material-data-table": "^0.10.10",
     "bootstrap": "^4.4.1",
     "hammerjs": "^2.0.8",
-    "jquery": "^3.4.1",
+    "jquery": "^3.5.0",
     "ngx-pagination": "^5.0.0",
-    "ngx-toastr": "^12.0.0",
+    "ngx-toastr": "^12.0.1",
     "popper.js": "^1.16.1",
-    "rxjs": "~6.5.4",
+    "rxjs": "^6.5.5",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.901.0",
-    "@angular/cli": "~9.1.0",
-    "@angular/compiler-cli": "~9.1.0",
-    "@angular/language-service": "~9.1.0",
-    "@types/node": "^12.11.1",
+    "@angular-devkit/build-angular": "^0.901.3",
+    "@angular/cli": "^9.1.3",
+    "@angular/compiler-cli": "^9.1.3",
+    "@angular/language-service": "^9.1.3",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "^12.12.37",
     "codelyzer": "^5.1.2",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
@@ -56,9 +56,9 @@
     "karma-coverage-istanbul-reporter": "~2.1.0",
     "karma-jasmine": "~3.0.1",
     "karma-jasmine-html-reporter": "^1.4.2",
-    "protractor": "~5.4.3",
+    "protractor": "^5.4.4",
     "ts-node": "~8.3.0",
-    "tslint": "~6.1.0",
+    "tslint": "^6.1.1",
     "typescript": "~3.8.3"
   }
 }
