--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,43 +4,39 @@
 version: "3"
 
 services:
-  db:
+  database:
     image: mysql:5.7
     volumes:
       - dbdata:/var/lib/mysql
     ports:
-      # - ${MYSQL_PORT}:${CONTAINER_MYSQL_PORT}
-      - 3307:3306
+      - "${HOST_MYSQL_PORT}:${CONTAINER_MYSQL_PORT}"
     environment:
-      #   MYSQL_DATABASE: ${MYSQL_DATABASE}
       MYSQL_USER: "${MYSQL_USER}"
       MYSQL_PASSWORD: "${MYSQL_PASSWORD}"
       MYSQL_DATABASE: "${MYSQL_DATABASE}"
       MYSQL_ROOT_PASSWORD: "${MYSQL_ROOT_PASSWORD}"
     restart: always
     networks:
-      - engenharia-app-network
+      - engenharia-network
 
   api:
     depends_on:
-      - db
+      - database
     image: engenharia-api
     restart: always
     build:
       context: ./api
     ports:
-      # - ${API_PORT}:${DOCKER_API_PORT}
-      - 20000:80
+      - "${API_PORT}:${CONTAINER_API_PORT}"
     environment:
-      # MYSQL_URL: "${MYSQL_URL}"
-      MYSQL_URL: db
+      MYSQL_URL: database
       MYSQL_PORT: "${CONTAINER_MYSQL_PORT}"
       MYSQL_DATABASE: "${MYSQL_DATABASE}"
       MYSQL_USER: "${MYSQL_USER}"
       MYSQL_PASSWORD: "${MYSQL_PASSWORD}"
       JWT_SECRET: "${JWT_SECRET}"
     networks:
-      - engenharia-app-network
+      - engenharia-network
 
   spa:
     depends_on:
@@ -49,15 +45,14 @@ services:
     build:
       context: ./spa
     ports:
-      # - ${SPA_PORT}:80
-      - 20001:80
+      - "${HOST_SPA_PORT}:80"
     environment:
-      API_URL: "http://${API_URL}:80/api"
+      API_URL: "http://${API_URL}"
     networks:
-      - engenharia-app-network
+      - engenharia-network
 
 networks:
-  engenharia-app-network:
+  engenharia-network:
     driver: bridge
 
 volumes:
