--- a/spa/nginx.conf
+++ b/spa/nginx.conf
@@ -1,23 +1,20 @@
-worker_processes  1;
+server {
+    listen 0.0.0.0:80;
+    listen [::]:80;
+    default_type application/octet-stream;
 
-events {
-    worker_connections  1024;
-}
+    gzip                    on;
+    gzip_comp_level         6;
+    gzip_vary               on;
+    gzip_min_length         1000;
+    gzip_proxied            any;
+    gzip_types              text/plain text/css application/json application/x-javascript text/xml application/xml application/xml+rss text/javascript;
+    gzip_buffers            16 8k;
+    client_max_body_size    256M;
 
-http {
-    server {
-        listen 80;
-        server_name  localhost;
-        root   /usr/share/nginx/html;
-        index  index.html index.htm;
-        include /etc/nginx/mime.types;
-        gzip on;
-        gzip_min_length 1000;
-        gzip_proxied expired no-cache no-store private auth;
-        gzip_types text/plain text/css application/json application/javascript application/x-javascript text/xml application/xml application/xml+rss text/javascript;
+    root /usr/share/nginx/html;
 
-        location / {
-            try_files $uri $uri/ /index.html;
-        }
+    location / {
+        try_files $uri $uri/ /index.html =404;
     }
 }
