--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,21 @@
 version: "3"
 
 services:
+  web_server:
+    depends_on:
+      - api
+      - spa
+    restart: always
+    image: engenharia-server
+    build:
+      context: ./nginx
+    ports:
+      - "80:80"
+    # volumes:
+    #   - spa-files:/usr/src/app
+    networks:
+      - engenharia-network
+
   database:
     image: mysql:5.7
     volumes:
@@ -48,6 +63,8 @@ services:
       - "${HOST_SPA_PORT}:80"
     environment:
       API_URL: "http://${API_URL}"
+    # volumes:
+    #   - spa-files:/usr/src/app/public
     networks:
       - engenharia-network
 
@@ -57,3 +74,4 @@ networks:
 
 volumes:
   dbdata:
+  # spa-files:
