--- a/spa/nginx.conf
+++ b/spa/nginx.conf
@@ -14,7 +14,15 @@ server {
 
     root /usr/share/nginx/html;
 
+    proxy_connect_timeout   90;
+    proxy_send_timeout      90;
+    proxy_read_timeout      90;
+
+    fastcgi_send_timeout 300;
+    fastcgi_read_timeout 300;
+
     location / {
         try_files $uri $uri/ /index.html =404;
     }
+
 }
