Add .env file to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -400,3 +400,8 @@ testem.log
 # System Files
 .DS_Store
 Thumbs.db
+
+
+
+# ======================================== Docker ========================================================
+.env
