Improvements for containers name

--- a/.env.example
+++ b/.env.example
@@ -16,3 +16,7 @@ HOST_SPA_PORT=20001
 API_URL=localhost:80
 # API_URL=api
 
+SPA_URL=spa.local.engenharia.com
+CONTAINER_API_NAME=api.local.engenharia.com
+DB_URL=mysql.local.engenharia.com
+PROXY_URL=proxy.local.engenharia.com
