--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,12 +4,13 @@
 version: "3"
 
 services:
-  web_server:
+  proxy:
+    container_name: "${PROXY_URL}"
+    restart: unless-stopped
     depends_on:
       - api
       - spa
-    restart: always
-    image: engenharia-server
+    image: engenharia-proxy
     build:
       context: ./nginx
     ports:
@@ -21,6 +22,7 @@ services:
       - engenharia-network
 
   database:
+    container_name: "${DB_URL}"
     image: mysql:5.7
     volumes:
       - dbdata:/var/lib/mysql
@@ -31,11 +33,12 @@ services:
       MYSQL_PASSWORD: "${MYSQL_PASSWORD}"
       MYSQL_DATABASE: "${MYSQL_DATABASE}"
       MYSQL_ROOT_PASSWORD: "${MYSQL_ROOT_PASSWORD}"
-    restart: always
+    restart: unless-stopped
     networks:
       - engenharia-network
 
   api:
+    container_name: "${CONTAINER_API_NAME}"
     depends_on:
       - database
     image: engenharia-api
@@ -55,6 +58,8 @@ services:
       - engenharia-network
 
   spa:
+    container_name: "${SPA_URL}"
+    restart: unless-stopped
     depends_on:
       - api
     image: engenharia-spa
@@ -64,8 +69,9 @@ services:
       - "${HOST_SPA_PORT}:80"
     environment:
       API_URL: "http://${API_URL}"
-      VIRTUAL_HOST: "${SPA_URL}"
-      VIRTUAL_PORT: "80"
+      # VIRTUAL_HOST: "${SPA_URL}"
+      VIRTUAL_HOST: ""
+      VIRTUAL_PORT: ""
     # volumes:
     #   - spa-files:/usr/src/app/public
     networks:
