--- a/spa/angular.json
+++ b/spa/angular.json
@@ -25,7 +25,7 @@
               "src/manifest.webmanifest"
             ],
             "styles": [
-              "src/styles.css",
+              "src/styles.scss",
               "src/theme.scss",
               "node_modules/ngx-toastr/toastr.css"
             ],
@@ -98,8 +98,8 @@
               "src/manifest.webmanifest"
             ],
             "styles": [
-              "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
-              "src/styles.css"
+              "./node_modules/@angular/material/prebuilt-themes/indigo-pink.scss",
+              "src/styles.scss"
             ],
             "scripts": []
           }
@@ -132,5 +132,10 @@
       }
     }
   },
-  "defaultProject": "engenharia-app"
+  "defaultProject": "engenharia-app",
+  "schematics": {
+    "@schematics/angular:component": {
+      "styleext": "scss"
+    }
+  }
 }
